fix code on IE, clean css, added function to prevent click event on card

--- a/assets/scss/molecules/statistics-figures/_sdg-card.scss
+++ b/assets/scss/molecules/statistics-figures/_sdg-card.scss
@@ -1,75 +1,93 @@
+.sdg-card{
+    width: 100%;
+    display: flex;
+    height: 160px;
+    color: $white;
+    position: relative;
+    background: #DEA83C;
+    align-items: center;
+    font-family: $secondary-font;
+    cursor: url("/assets/images/arrows/sdg-hover-arrow.svg"), url("/assets/images/arrows/sdg-hover-arrow.cur"), auto;
 
-//.sdg-card-container{
-    //display: flex;
-    //flex-direction: column;
+    @include breakpoint(small only){
+        height: 245px;
+        padding: 35px 24px 0;
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
-    .sdg-card{
-        width: 100%;
+
+    .number{
+        font-size: 11rem;
+        font-weight: $bold;
+        padding: 0 160px 0 24px;
+
+        @include breakpoint(small only){
+            padding: 0;
+            font-size: 4.7rem;
+        }
+    }
+
+    .title{
         display: flex;
-        height: 160px;
-        color: $white;
-        position: relative;
-        background: #DEA83C;
+        font-size: 3rem;
+        position: absolute;
+        margin-left: 230px;
+        z-index: $z-index-1;
         align-items: center;
-        font-family: $secondary-font;
-        cursor: url("/assets/images/arrows/sdg-hover-arrow.svg"), url("/assets/images/arrows/sdg-hover-arrow.cur"), auto;
 
-
-        .number{
-            font-size: 11rem;
-            padding: 0 160px 0 24px;
-
-            @include breakpoint(small only){
-
-            }
-        }
-
-        .title{
-            font-size: 3rem;
-            position: absolute;
-            display: flex;
-            align-items: center;
-            margin-left: 230px;
-            z-index: $z-index-1;
-        }
-
-        .hover-image{
-            margin-left: auto;
+        @include breakpoint(small only){
+            width: 100%;
+            margin: 25px 0 0;
+            font-size: 2.5rem;
             position: relative;
+        }
+    }
 
-            img{
-                opacity: 0;
-                height: 100%;
-                object-fit: cover;
-                position: relative;
-                transition: opacity 0.5s ease;
-            }
+    .hover-image{
+        margin-left: auto;
+        position: relative;
 
-            .gradient{
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                background-image: linear-gradient(to left,
-                        rgba(222,168,60,0) 0%,
-                        rgba(222,168,60,0) 80%,
-                        rgba(222,168,60)    100%);
-                transition: background-color 0.5s linear;
-            }
-
+        @include breakpoint(small only){
+            display: none;
         }
 
-        &:hover{
-            color: $white;
+        img{
+            opacity: 0;
+            height: 100%;
+            object-fit: cover;
+            position: relative;
+            transition: opacity 0.5s ease;
+        }
 
-            @include breakpoint(large up){
-                .hover-image {
-                    img{
-                        opacity: 0.3;
-                    }
+        .gradient{
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            transition: background-color 0.5s linear;
+            background-image: linear-gradient(to left,
+            rgba(222,168,60,0) 0%,
+            rgba(222,168,60,0) 80%,
+            rgba(222,168,60)    100%);
+        }
+
+    }
+
+    &:visited{
+        color: $white;
+    }
+
+    &:hover{
+        color: $white;
+
+        @include breakpoint(large up){
+            .hover-image {
+                img{
+                    opacity: 0.3;
                 }
             }
         }
     }
-//}
+}
